Agregando QRs para PRD

--- a/src/main/resources/static/demo.html
+++ b/src/main/resources/static/demo.html
@@ -15,12 +15,48 @@
         ¡Pruebame!
     </div>
     <div id="post">
-        <img id="qrSI" class="qr" src="img/qr/qr1.png" />
-        <img id="qrSM" class="qr" src="img/qr/qr2.png" />
-        <img id="qrSD" class="qr" src="img/qr/qr3.png" />
-        <img id="qrII" class="qr" src="img/qr/qr4.png" />
-        <img id="qrIM" class="qr" src="img/qr/qr5.png" />
-        <img id="qrID" class="qr" src="img/qr/qr6.png" />
+        <img class="qr" src="img/qr/qr1.png" />
+        <img class="qr" src="img/qr/qr2.png" />
+        <img class="qr" src="img/qr/qr3.png" />
+        <img class="qr" src="img/qr/qr4.png" />
+        <img class="qr" src="img/qr/qr5.png" />
+        <img class="qr" src="img/qr/qr6.png" />
+        <img class="qr" src="img/qr/qr7.png" />
+        <img class="qr" src="img/qr/qr8.png" />
+        <img class="qr" src="img/qr/qr9.png" />
+        <img class="qr" src="img/qr/qr10.png" />
+        <img class="qr" src="img/qr/qr11.png" />
+        <img class="qr" src="img/qr/qr12.png" />
+        <img class="qr" src="img/qr/qr13.png" />
+        <img class="qr" src="img/qr/qr14.png" />
+        <img class="qr" src="img/qr/qr15.png" />
+        <img class="qr" src="img/qr/qr16.png" />
+        <img class="qr" src="img/qr/qr16.png" />
+        <img class="qr" src="img/qr/qr17.png" />
+        <img class="qr" src="img/qr/qr18.png" />
+        <img class="qr" src="img/qr/qr19.png" />
+        <img class="qr" src="img/qr/qr19.png" />
+        <img class="qr" src="img/qr/qr20.png" />
+        <img class="qr" src="img/qr/qr21.png" />
+        <img class="qr" src="img/qr/qr22.png" />
+        <img class="qr" src="img/qr/qr23.png" />
+        <img class="qr" src="img/qr/qr24.png" />
+        <img class="qr" src="img/qr/qr25.png" />
+        <img class="qr" src="img/qr/qr26.png" />
+        <img class="qr" src="img/qr/qr27.png" />
+        <img class="qr" src="img/qr/qr28.png" />
+        <img class="qr" src="img/qr/qr29.png" />
+        <img class="qr" src="img/qr/qr30.png" />
+        <img class="qr" src="img/qr/qr31.png" />
+        <img class="qr" src="img/qr/qr32.png" />
+        <img class="qr" src="img/qr/qr33.png" />
+        <img class="qr" src="img/qr/qr34.png" />
+        <img class="qr" src="img/qr/qr35.png" />
+        <img class="qr" src="img/qr/qr36.png" />
+        <img class="qr" src="img/qr/qr37.png" />
+        <img class="qr" src="img/qr/qr38.png" />
+        <img class="qr" src="img/qr/qr39.png" />
+        <img class="qr" src="img/qr/qr40.png" />
     </div>
 </div>
 </body>
