--- a/src/main/resources/static/demo.html
+++ b/src/main/resources/static/demo.html
@@ -55,6 +55,62 @@
         <img class="qr" src="img/qr/qr38.png" />
         <img class="qr" src="img/qr/qr39.png" />
         <img class="qr" src="img/qr/qr40.png" />
+        <img class="qr" src="img/qr/qr41.png" />
+        <img class="qr" src="img/qr/qr42.png" />
+        <img class="qr" src="img/qr/qr43.png" />
+        <img class="qr" src="img/qr/qr44.png" />
+        <img class="qr" src="img/qr/qr45.png" />
+        <img class="qr" src="img/qr/qr46.png" />
+        <img class="qr" src="img/qr/qr47.png" />
+        <img class="qr" src="img/qr/qr48.png" />
+        <img class="qr" src="img/qr/qr49.png" />
+        <img class="qr" src="img/qr/qr50.png" />
+        <img class="qr" src="img/qr/qr51.png" />
+        <img class="qr" src="img/qr/qr52.png" />
+        <img class="qr" src="img/qr/qr53.png" />
+        <img class="qr" src="img/qr/qr54.png" />
+        <img class="qr" src="img/qr/qr55.png" />
+        <img class="qr" src="img/qr/qr56.png" />
+        <img class="qr" src="img/qr/qr57.png" />
+        <img class="qr" src="img/qr/qr58.png" />
+        <img class="qr" src="img/qr/qr59.png" />
+        <img class="qr" src="img/qr/qr60.png" />
+        <img class="qr" src="img/qr/qr61.png" />
+        <img class="qr" src="img/qr/qr62.png" />
+        <img class="qr" src="img/qr/qr63.png" />
+        <img class="qr" src="img/qr/qr64.png" />
+        <img class="qr" src="img/qr/qr65.png" />
+        <img class="qr" src="img/qr/qr66.png" />
+        <img class="qr" src="img/qr/qr67.png" />
+        <img class="qr" src="img/qr/qr68.png" />
+        <img class="qr" src="img/qr/qr69.png" />
+        <img class="qr" src="img/qr/qr70.png" />
+        <img class="qr" src="img/qr/qr71.png" />
+        <img class="qr" src="img/qr/qr72.png" />
+        <img class="qr" src="img/qr/qr73.png" />
+        <img class="qr" src="img/qr/qr74.png" />
+        <img class="qr" src="img/qr/qr75.png" />
+        <img class="qr" src="img/qr/qr76.png" />
+        <img class="qr" src="img/qr/qr77.png" />
+        <img class="qr" src="img/qr/qr78.png" />
+        <img class="qr" src="img/qr/qr79.png" />
+        <img class="qr" src="img/qr/qr80.png" />
+        <img class="qr" src="img/qr/qr81.png" />
+        <img class="qr" src="img/qr/qr82.png" />
+        <img class="qr" src="img/qr/qr83.png" />
+        <img class="qr" src="img/qr/qr84.png" />
+        <img class="qr" src="img/qr/qr85.png" />
+        <img class="qr" src="img/qr/qr86.png" />
+        <img class="qr" src="img/qr/qr87.png" />
+        <img class="qr" src="img/qr/qr88.png" />
+        <img class="qr" src="img/qr/qr89.png" />
+        <img class="qr" src="img/qr/qr90.png" />
+        <img class="qr" src="img/qr/qr91.png" />
+        <img class="qr" src="img/qr/qr92.png" />
+        <img class="qr" src="img/qr/qr93.png" />
+        <img class="qr" src="img/qr/qr94.png" />
+        <img class="qr" src="img/qr/qr95.png" />
+        <img class="qr" src="img/qr/qr96.png" />
     </div>
 </div>
 </body>
