Adding new QRs codes

--- a/src/main/resources/static/demo.html
+++ b/src/main/resources/static/demo.html
@@ -21,6 +21,48 @@
         <img class="qr" src="img/qr/QR CocaCola 4.png" />
         <img class="qr" src="img/qr/QR CocaCola 5.png" />
         <img class="qr" src="img/qr/QR CocaCola 6.png" />
+        <img class="qr" src="img/qr/QR CocaCola 7.png" />
+        <img class="qr" src="img/qr/QR CocaCola 8.png" />
+        <img class="qr" src="img/qr/QR CocaCola 9.png" />
+        <img class="qr" src="img/qr/QR CocaCola 10.png" />
+        <img class="qr" src="img/qr/QR CocaCola 11.png" />
+        <img class="qr" src="img/qr/QR CocaCola 12.png" />
+        <img class="qr" src="img/qr/QR CocaCola 13.png" />
+        <img class="qr" src="img/qr/QR CocaCola 14.png" />
+        <img class="qr" src="img/qr/QR CocaCola 15.png" />
+        <img class="qr" src="img/qr/QR CocaCola 16.png" />
+        <img class="qr" src="img/qr/QR CocaCola 17.png" />
+        <img class="qr" src="img/qr/QR CocaCola 18.png" />
+        <img class="qr" src="img/qr/QR CocaCola 19.png" />
+        <img class="qr" src="img/qr/QR CocaCola 20.png" />
+        <img class="qr" src="img/qr/QR CocaCola 21.png" />
+        <img class="qr" src="img/qr/QR CocaCola 22.png" />
+        <img class="qr" src="img/qr/QR CocaCola 23.png" />
+        <img class="qr" src="img/qr/QR CocaCola 24.png" />
+        <img class="qr" src="img/qr/QR CocaCola 25.png" />
+        <img class="qr" src="img/qr/QR CocaCola 26.png" />
+        <img class="qr" src="img/qr/QR CocaCola 27.png" />
+        <img class="qr" src="img/qr/QR CocaCola 28.png" />
+        <img class="qr" src="img/qr/QR CocaCola 29.png" />
+        <img class="qr" src="img/qr/QR CocaCola 30.png" />
+        <img class="qr" src="img/qr/QR CocaCola 31.png" />
+        <img class="qr" src="img/qr/QR CocaCola 32.png" />
+        <img class="qr" src="img/qr/QR CocaCola 33.png" />
+        <img class="qr" src="img/qr/QR CocaCola 34.png" />
+        <img class="qr" src="img/qr/QR CocaCola 35.png" />
+        <img class="qr" src="img/qr/QR CocaCola 36.png" />
+        <img class="qr" src="img/qr/QR CocaCola 37.png" />
+        <img class="qr" src="img/qr/QR CocaCola 38.png" />
+        <img class="qr" src="img/qr/QR CocaCola 39.png" />
+        <img class="qr" src="img/qr/QR CocaCola 40.png" />
+        <img class="qr" src="img/qr/QR CocaCola 41.png" />
+        <img class="qr" src="img/qr/QR CocaCola 42.png" />
+        <img class="qr" src="img/qr/QR CocaCola 43.png" />
+        <img class="qr" src="img/qr/QR CocaCola 44.png" />
+        <img class="qr" src="img/qr/QR CocaCola 45.png" />
+        <img class="qr" src="img/qr/QR CocaCola 46.png" />
+        <img class="qr" src="img/qr/QR CocaCola 47.png" />
+        <img class="qr" src="img/qr/QR CocaCola 48.png" />
     </div>
 </div>
 </body>
