--- a/src/main/resources/static/p2vj4j59hlkuh75lkoovggu19ojofcas.html
+++ b/src/main/resources/static/p2vj4j59hlkuh75lkoovggu19ojofcas.html
@@ -31,7 +31,7 @@
     const t = urlParams.get('t');
 
     if (window.history.replaceState) {
-        window.history.replaceState({}, "Ganaste mercancia oficial de Sprite.", "/api/concurso/daddy/v1/Tier2");
+        window.history.replaceState({}, "Ganaste mercancia oficial de Sprite.", "/Tier2");
     }
 
     if (t != 'eknaeu3sfvmdnxvqkfz486j2y6z835bi-10823b52jmxyzrym56hg5ga21i5fjn03b') {
