--- a/src/main/resources/static/_3d6nw2lyabresbnq5rjw6jde2sw5u48hj.html
+++ b/src/main/resources/static/_3d6nw2lyabresbnq5rjw6jde2sw5u48hj.html
@@ -31,7 +31,7 @@
     const t = urlParams.get('t');
 
     if (window.history.replaceState) {
-        window.history.replaceState({}, "Ganaste una entrada para Daddy Yankee", "/api/concurso/daddy/v1/Tier1");
+        window.history.replaceState({}, "Ganaste una entrada para Daddy Yankee", "/Tier1");
     }
 
     if (t != 'eknaeu3sfvmdnxvqkfz486j2y6z835bi-10823b52jmxyzrym56hg5ga21i5fjn03b') {
